// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmConfigOps Classic Tests exportAmConfigEntities() 2: Export AM Config Entities 1`] = `
{
  "global": {
    "serverInformation": {
      "*": {
        "_id": "*",
        "_rev": "1352294770",
        "cookieName": "iPlanetDirectoryPro",
        "domains": [
          null,
        ],
        "fileBasedConfiguration": false,
        "forgotPassword": "false",
        "forgotUsername": "false",
        "kbaEnabled": "false",
        "lang": "en-US",
        "protectedUserAttributes": [
          "telephoneNumber",
          "mail",
        ],
        "realm": "/",
        "referralsEnabled": "false",
        "secureCookie": false,
        "selfRegistration": "false",
        "socialImplementations": [],
        "successfulUserRegistrationDestination": "default",
        "userIdAttributes": [],
        "xuiUserSessionValidationEnabled": true,
        "zeroPageLogin": {
          "allowedWithoutReferer": true,
          "enabled": false,
          "refererWhitelist": [],
        },
      },
    },
    "serverVersion": {
      "version": {
        "_id": "version",
        "_rev": "-1772220916",
        "date": "2024-March-28 16:00",
        "fullVersion": "ForgeRock Access Management 7.5.0 Build 89116d59a1ebe73ed1931dd3649adb7f217cd06b (2024-March-28 16:00)",
        "revision": "89116d59a1ebe73ed1931dd3649adb7f217cd06b",
        "version": "7.5.0",
      },
    },
  },
  "meta": Any<Object>,
  "realm": {
    "root": {
      "applicationTypes": {
        "iPlanetAMWebAgentService": {
          "_id": "iPlanetAMWebAgentService",
          "actions": {
            "DELETE": true,
            "GET": true,
            "HEAD": true,
            "OPTIONS": true,
            "PATCH": true,
            "POST": true,
            "PUT": true,
          },
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "iPlanetAMWebAgentService",
          "resourceComparator": "com.sun.identity.entitlement.URLResourceName",
          "saveIndex": "org.forgerock.openam.entitlement.indextree.TreeSaveIndex",
          "searchIndex": "org.forgerock.openam.entitlement.indextree.TreeSearchIndex",
        },
        "sunAMDelegationService": {
          "_id": "sunAMDelegationService",
          "actions": {
            "DELEGATE": true,
            "MODIFY": true,
            "READ": true,
          },
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "sunAMDelegationService",
          "resourceComparator": "com.sun.identity.entitlement.RegExResourceName",
          "saveIndex": "com.sun.identity.entitlement.opensso.DelegationResourceNameIndexGenerator",
          "searchIndex": "com.sun.identity.entitlement.opensso.DelegationResourceNameSplitter",
        },
        "umaApplicationType": {
          "_id": "umaApplicationType",
          "actions": {},
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "umaApplicationType",
          "resourceComparator": "org.forgerock.openam.uma.UmaPolicyResourceMatcher",
          "saveIndex": "org.forgerock.openam.uma.UmaPolicySaveIndex",
          "searchIndex": "org.forgerock.openam.uma.UmaPolicySearchIndex",
        },
      },
      "authenticationChains": {
        "amsterService": {
          "_id": "amsterService",
          "_rev": "644917310",
          "_type": {
            "_id": "EMPTY",
            "collection": true,
            "name": "Authentication Configuration",
          },
          "authChainConfiguration": [
            {
              "criteria": "REQUIRED",
              "module": "Amster",
              "options": {},
            },
          ],
          "loginFailureUrl": [],
          "loginPostProcessClass": [],
          "loginSuccessUrl": [],
        },
        "ldapService": {
          "_id": "ldapService",
          "_rev": "357765346",
          "_type": {
            "_id": "EMPTY",
            "collection": true,
            "name": "Authentication Configuration",
          },
          "authChainConfiguration": [
            {
              "criteria": "REQUIRED",
              "module": "DataStore",
              "options": {},
            },
          ],
          "loginFailureUrl": [],
          "loginPostProcessClass": [],
          "loginSuccessUrl": [],
        },
      },
      "authenticationModules": {
        "amster": {
          "_id": "amster",
          "_type": {
            "_id": "amster",
            "collection": true,
            "name": "ForgeRock Amster",
          },
          "authenticationLevel": 0,
          "authorizedKeys": "/home/prestonhales/am/security/keys/amster/authorized_keys",
          "enabled": true,
        },
        "datastore": {
          "_id": "datastore",
          "_type": {
            "_id": "datastore",
            "collection": true,
            "name": "Data Store",
          },
          "authenticationLevel": 0,
        },
        "federation": {
          "_id": "federation",
          "_type": {
            "_id": "federation",
            "collection": true,
            "name": "Federation",
          },
          "authenticationLevel": 0,
        },
        "hotp": {
          "_id": "hotp",
          "_type": {
            "_id": "hotp",
            "collection": true,
            "name": "HOTP",
          },
          "authenticationLevel": 0,
          "autoSendOTP": false,
          "otpDeliveryMethod": "SMS and E-mail",
          "otpLength": "8",
          "otpMaxRetry": 3,
          "otpValidityDuration": 5,
          "smsGatewayClass": "com.sun.identity.authentication.modules.hotp.DefaultSMSGatewayImpl",
          "smtpFromAddress": "no-reply@openam.org",
          "smtpHostPort": 465,
          "smtpHostname": "smtp.gmail.com",
          "smtpSslEnabled": "SSL",
          "smtpUserPassword": null,
          "smtpUsername": "opensso.sun",
          "userProfileEmailAttribute": "mail",
          "userProfileTelephoneAttribute": "telephoneNumber",
        },
        "ldap": {
          "_id": "ldap",
          "_type": {
            "_id": "ldap",
            "collection": true,
            "name": "LDAP",
          },
          "authenticationLevel": 0,
          "beheraPasswordPolicySupportEnabled": true,
          "connectionHeartbeatInterval": 10,
          "connectionHeartbeatTimeUnit": "SECONDS",
          "minimumPasswordLength": "8",
          "openam-auth-ldap-connection-mode": "LDAPS",
          "operationTimeout": 0,
          "primaryLdapServer": [
            "localhost:50636",
          ],
          "profileAttributeMappings": [],
          "returnUserDN": true,
          "searchScope": "SUBTREE",
          "secondaryLdapServer": [],
          "stopLdapbindAfterInmemoryLockedEnabled": false,
          "trustAllServerCertificates": false,
          "userBindDN": "cn=Directory Manager",
          "userBindPassword": null,
          "userProfileRetrievalAttribute": "uid",
          "userSearchAttributes": [
            "uid",
          ],
          "userSearchStartDN": [
            "dc=openam,dc=forgerock,dc=org",
          ],
        },
        "oath": {
          "_id": "oath",
          "_type": {
            "_id": "oath",
            "collection": true,
            "name": "OATH",
          },
          "addChecksum": "False",
          "authenticationLevel": 0,
          "forgerock-oath-maximum-clock-drift": 0,
          "forgerock-oath-sharedsecret-implementation-class": "org.forgerock.openam.authentication.modules.oath.plugins.DefaultSharedSecretProvider",
          "hotpWindowSize": 100,
          "minimumSecretKeyLength": "32",
          "oathAlgorithm": "HOTP",
          "oathOtpMaxRetry": 3,
          "passwordLength": "6",
          "stepsInWindow": 2,
          "timeStepSize": 30,
          "truncationOffset": -1,
        },
        "sae": {
          "_id": "sae",
          "_type": {
            "_id": "sae",
            "collection": true,
            "name": "SAE",
          },
          "authenticationLevel": 0,
        },
      },
      "conditionTypes": {
        "AMIdentityMembership": {
          "_id": "AMIdentityMembership",
          "config": {
            "properties": {
              "amIdentityName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AMIdentityMembership",
        },
        "AND": {
          "_id": "AND",
          "config": {
            "properties": {
              "conditions": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "AND",
        },
        "AuthLevel": {
          "_id": "AuthLevel",
          "config": {
            "properties": {
              "authLevel": {
                "type": "integer",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthLevel",
        },
        "AuthScheme": {
          "_id": "AuthScheme",
          "config": {
            "properties": {
              "applicationIdleTimeout": {
                "type": "integer",
              },
              "applicationName": {
                "type": "string",
              },
              "authScheme": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthScheme",
        },
        "AuthenticateToRealm": {
          "_id": "AuthenticateToRealm",
          "config": {
            "properties": {
              "authenticateToRealm": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticateToRealm",
        },
        "AuthenticateToService": {
          "_id": "AuthenticateToService",
          "config": {
            "properties": {
              "authenticateToService": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticateToService",
        },
        "IPv4": {
          "_id": "IPv4",
          "config": {
            "properties": {
              "dnsName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "endIp": {
                "type": "string",
              },
              "startIp": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "IPv4",
        },
        "IPv6": {
          "_id": "IPv6",
          "config": {
            "properties": {
              "dnsName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "endIp": {
                "type": "string",
              },
              "startIp": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "IPv6",
        },
        "LDAPFilter": {
          "_id": "LDAPFilter",
          "config": {
            "properties": {
              "ldapFilter": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "LDAPFilter",
        },
        "LEAuthLevel": {
          "_id": "LEAuthLevel",
          "config": {
            "properties": {
              "authLevel": {
                "type": "integer",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "LEAuthLevel",
        },
        "NOT": {
          "_id": "NOT",
          "config": {
            "properties": {
              "condition": {
                "properties": {},
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "NOT",
        },
        "OAuth2Scope": {
          "_id": "OAuth2Scope",
          "config": {
            "properties": {
              "requiredScopes": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "OAuth2Scope",
        },
        "OR": {
          "_id": "OR",
          "config": {
            "properties": {
              "conditions": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "OR",
        },
        "Policy": {
          "_id": "Policy",
          "config": {
            "properties": {
              "className": {
                "type": "string",
              },
              "properties": {
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Policy",
        },
        "ResourceEnvIP": {
          "_id": "ResourceEnvIP",
          "config": {
            "properties": {
              "resourceEnvIPConditionValue": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "ResourceEnvIP",
        },
        "Script": {
          "_id": "Script",
          "config": {
            "properties": {
              "scriptId": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Script",
        },
        "Session": {
          "_id": "Session",
          "config": {
            "properties": {
              "maxSessionTime": {
                "type": "integer",
              },
              "terminateSession": {
                "required": true,
                "type": "boolean",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Session",
        },
        "SessionProperty": {
          "_id": "SessionProperty",
          "config": {
            "properties": {
              "ignoreValueCase": {
                "required": true,
                "type": "boolean",
              },
              "properties": {
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "SessionProperty",
        },
        "SimpleTime": {
          "_id": "SimpleTime",
          "config": {
            "properties": {
              "endDate": {
                "type": "string",
              },
              "endDay": {
                "type": "string",
              },
              "endTime": {
                "type": "string",
              },
              "enforcementTimeZone": {
                "type": "string",
              },
              "startDate": {
                "type": "string",
              },
              "startDay": {
                "type": "string",
              },
              "startTime": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "SimpleTime",
        },
        "Transaction": {
          "_id": "Transaction",
          "config": {
            "properties": {
              "authenticationStrategy": {
                "type": "string",
              },
              "strategySpecifier": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Transaction",
        },
      },
      "decisionCombiners": {
        "DenyOverride": {
          "_id": "DenyOverride",
          "title": "DenyOverride",
        },
      },
      "secrets": {},
      "subjectAttributes": {
        "undefined": "iplanet-am-user-login-status",
      },
      "subjectTypes": {
        "AND": {
          "_id": "AND",
          "config": {
            "properties": {
              "subjects": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "AND",
        },
        "AuthenticatedUsers": {
          "_id": "AuthenticatedUsers",
          "config": {
            "properties": {},
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticatedUsers",
        },
        "Identity": {
          "_id": "Identity",
          "config": {
            "properties": {
              "subjectValues": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Identity",
        },
        "JwtClaim": {
          "_id": "JwtClaim",
          "config": {
            "properties": {
              "claimName": {
                "type": "string",
              },
              "claimValue": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "JwtClaim",
        },
        "NONE": {
          "_id": "NONE",
          "config": {
            "properties": {},
            "type": "object",
          },
          "logical": false,
          "title": "NONE",
        },
        "NOT": {
          "_id": "NOT",
          "config": {
            "properties": {
              "subject": {
                "properties": {},
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "NOT",
        },
        "OR": {
          "_id": "OR",
          "config": {
            "properties": {
              "subjects": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "OR",
        },
        "Policy": {
          "_id": "Policy",
          "config": {
            "properties": {
              "className": {
                "type": "string",
              },
              "name": {
                "type": "string",
              },
              "values": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Policy",
        },
      },
      "webhookService": {
        "Cool Webhook": {
          "_id": "Cool Webhook",
          "_rev": "1386996185",
          "_type": {
            "_id": "webhooks",
            "collection": true,
            "name": "Webhook Service",
          },
          "body": "body",
          "headers": {
            "accept": "*/*",
            "cool": "test",
          },
          "url": "test",
        },
        "Test Webhook": {
          "_id": "Test Webhook",
          "_rev": "2105362594",
          "_type": {
            "_id": "webhooks",
            "collection": true,
            "name": "Webhook Service",
          },
          "body": "hello",
          "headers": {
            "accept": "*/*",
          },
        },
      },
      "wsEntity": {
        "ws": {
          "_id": "ws",
          "_rev": "720692750",
          "_type": {
            "_id": "ws",
            "collection": true,
            "name": "Entity Descriptor ",
          },
        },
      },
    },
    "root-first": {
      "applicationTypes": {
        "iPlanetAMWebAgentService": {
          "_id": "iPlanetAMWebAgentService",
          "actions": {
            "DELETE": true,
            "GET": true,
            "HEAD": true,
            "OPTIONS": true,
            "PATCH": true,
            "POST": true,
            "PUT": true,
          },
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "iPlanetAMWebAgentService",
          "resourceComparator": "com.sun.identity.entitlement.URLResourceName",
          "saveIndex": "org.forgerock.openam.entitlement.indextree.TreeSaveIndex",
          "searchIndex": "org.forgerock.openam.entitlement.indextree.TreeSearchIndex",
        },
        "sunAMDelegationService": {
          "_id": "sunAMDelegationService",
          "actions": {
            "DELEGATE": true,
            "MODIFY": true,
            "READ": true,
          },
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "sunAMDelegationService",
          "resourceComparator": "com.sun.identity.entitlement.RegExResourceName",
          "saveIndex": "com.sun.identity.entitlement.opensso.DelegationResourceNameIndexGenerator",
          "searchIndex": "com.sun.identity.entitlement.opensso.DelegationResourceNameSplitter",
        },
        "umaApplicationType": {
          "_id": "umaApplicationType",
          "actions": {},
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "umaApplicationType",
          "resourceComparator": "org.forgerock.openam.uma.UmaPolicyResourceMatcher",
          "saveIndex": "org.forgerock.openam.uma.UmaPolicySaveIndex",
          "searchIndex": "org.forgerock.openam.uma.UmaPolicySearchIndex",
        },
      },
      "authenticationChains": {
        "amsterService": {
          "_id": "amsterService",
          "_rev": "644917310",
          "_type": {
            "_id": "EMPTY",
            "collection": true,
            "name": "Authentication Configuration",
          },
          "authChainConfiguration": [
            {
              "criteria": "REQUIRED",
              "module": "Amster",
              "options": {},
            },
          ],
          "loginFailureUrl": [],
          "loginPostProcessClass": [],
          "loginSuccessUrl": [],
        },
        "ldapService": {
          "_id": "ldapService",
          "_rev": "357765346",
          "_type": {
            "_id": "EMPTY",
            "collection": true,
            "name": "Authentication Configuration",
          },
          "authChainConfiguration": [
            {
              "criteria": "REQUIRED",
              "module": "DataStore",
              "options": {},
            },
          ],
          "loginFailureUrl": [],
          "loginPostProcessClass": [],
          "loginSuccessUrl": [],
        },
      },
      "authenticationModules": {
        "amster": {
          "_id": "amster",
          "_type": {
            "_id": "amster",
            "collection": true,
            "name": "ForgeRock Amster",
          },
          "authenticationLevel": 0,
          "authorizedKeys": "/home/prestonhales/am/security/keys/amster/authorized_keys",
          "enabled": true,
        },
        "datastore": {
          "_id": "datastore",
          "_type": {
            "_id": "datastore",
            "collection": true,
            "name": "Data Store",
          },
          "authenticationLevel": 0,
        },
        "federation": {
          "_id": "federation",
          "_type": {
            "_id": "federation",
            "collection": true,
            "name": "Federation",
          },
          "authenticationLevel": 0,
        },
        "hotp": {
          "_id": "hotp",
          "_type": {
            "_id": "hotp",
            "collection": true,
            "name": "HOTP",
          },
          "authenticationLevel": 0,
          "autoSendOTP": false,
          "otpDeliveryMethod": "SMS and E-mail",
          "otpLength": "8",
          "otpMaxRetry": 3,
          "otpValidityDuration": 5,
          "smsGatewayClass": "com.sun.identity.authentication.modules.hotp.DefaultSMSGatewayImpl",
          "smtpFromAddress": "no-reply@openam.org",
          "smtpHostPort": 465,
          "smtpHostname": "smtp.gmail.com",
          "smtpSslEnabled": "SSL",
          "smtpUserPassword": null,
          "smtpUsername": "opensso.sun",
          "userProfileEmailAttribute": "mail",
          "userProfileTelephoneAttribute": "telephoneNumber",
        },
        "ldap": {
          "_id": "ldap",
          "_type": {
            "_id": "ldap",
            "collection": true,
            "name": "LDAP",
          },
          "authenticationLevel": 0,
          "beheraPasswordPolicySupportEnabled": true,
          "connectionHeartbeatInterval": 10,
          "connectionHeartbeatTimeUnit": "SECONDS",
          "minimumPasswordLength": "8",
          "openam-auth-ldap-connection-mode": "LDAPS",
          "operationTimeout": 0,
          "primaryLdapServer": [
            "localhost:50636",
          ],
          "profileAttributeMappings": [],
          "returnUserDN": true,
          "searchScope": "SUBTREE",
          "secondaryLdapServer": [],
          "stopLdapbindAfterInmemoryLockedEnabled": false,
          "trustAllServerCertificates": false,
          "userBindDN": "cn=Directory Manager",
          "userBindPassword": null,
          "userProfileRetrievalAttribute": "uid",
          "userSearchAttributes": [
            "uid",
          ],
          "userSearchStartDN": [
            "dc=openam,dc=forgerock,dc=org",
          ],
        },
        "oath": {
          "_id": "oath",
          "_type": {
            "_id": "oath",
            "collection": true,
            "name": "OATH",
          },
          "addChecksum": "False",
          "authenticationLevel": 0,
          "forgerock-oath-maximum-clock-drift": 0,
          "forgerock-oath-sharedsecret-implementation-class": "org.forgerock.openam.authentication.modules.oath.plugins.DefaultSharedSecretProvider",
          "hotpWindowSize": 100,
          "minimumSecretKeyLength": "32",
          "oathAlgorithm": "HOTP",
          "oathOtpMaxRetry": 3,
          "passwordLength": "6",
          "stepsInWindow": 2,
          "timeStepSize": 30,
          "truncationOffset": -1,
        },
        "sae": {
          "_id": "sae",
          "_type": {
            "_id": "sae",
            "collection": true,
            "name": "SAE",
          },
          "authenticationLevel": 0,
        },
      },
      "conditionTypes": {
        "AMIdentityMembership": {
          "_id": "AMIdentityMembership",
          "config": {
            "properties": {
              "amIdentityName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AMIdentityMembership",
        },
        "AND": {
          "_id": "AND",
          "config": {
            "properties": {
              "conditions": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "AND",
        },
        "AuthLevel": {
          "_id": "AuthLevel",
          "config": {
            "properties": {
              "authLevel": {
                "type": "integer",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthLevel",
        },
        "AuthScheme": {
          "_id": "AuthScheme",
          "config": {
            "properties": {
              "applicationIdleTimeout": {
                "type": "integer",
              },
              "applicationName": {
                "type": "string",
              },
              "authScheme": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthScheme",
        },
        "AuthenticateToRealm": {
          "_id": "AuthenticateToRealm",
          "config": {
            "properties": {
              "authenticateToRealm": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticateToRealm",
        },
        "AuthenticateToService": {
          "_id": "AuthenticateToService",
          "config": {
            "properties": {
              "authenticateToService": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticateToService",
        },
        "IPv4": {
          "_id": "IPv4",
          "config": {
            "properties": {
              "dnsName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "endIp": {
                "type": "string",
              },
              "startIp": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "IPv4",
        },
        "IPv6": {
          "_id": "IPv6",
          "config": {
            "properties": {
              "dnsName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "endIp": {
                "type": "string",
              },
              "startIp": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "IPv6",
        },
        "LDAPFilter": {
          "_id": "LDAPFilter",
          "config": {
            "properties": {
              "ldapFilter": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "LDAPFilter",
        },
        "LEAuthLevel": {
          "_id": "LEAuthLevel",
          "config": {
            "properties": {
              "authLevel": {
                "type": "integer",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "LEAuthLevel",
        },
        "NOT": {
          "_id": "NOT",
          "config": {
            "properties": {
              "condition": {
                "properties": {},
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "NOT",
        },
        "OAuth2Scope": {
          "_id": "OAuth2Scope",
          "config": {
            "properties": {
              "requiredScopes": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "OAuth2Scope",
        },
        "OR": {
          "_id": "OR",
          "config": {
            "properties": {
              "conditions": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "OR",
        },
        "Policy": {
          "_id": "Policy",
          "config": {
            "properties": {
              "className": {
                "type": "string",
              },
              "properties": {
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Policy",
        },
        "ResourceEnvIP": {
          "_id": "ResourceEnvIP",
          "config": {
            "properties": {
              "resourceEnvIPConditionValue": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "ResourceEnvIP",
        },
        "Script": {
          "_id": "Script",
          "config": {
            "properties": {
              "scriptId": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Script",
        },
        "Session": {
          "_id": "Session",
          "config": {
            "properties": {
              "maxSessionTime": {
                "type": "integer",
              },
              "terminateSession": {
                "required": true,
                "type": "boolean",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Session",
        },
        "SessionProperty": {
          "_id": "SessionProperty",
          "config": {
            "properties": {
              "ignoreValueCase": {
                "required": true,
                "type": "boolean",
              },
              "properties": {
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "SessionProperty",
        },
        "SimpleTime": {
          "_id": "SimpleTime",
          "config": {
            "properties": {
              "endDate": {
                "type": "string",
              },
              "endDay": {
                "type": "string",
              },
              "endTime": {
                "type": "string",
              },
              "enforcementTimeZone": {
                "type": "string",
              },
              "startDate": {
                "type": "string",
              },
              "startDay": {
                "type": "string",
              },
              "startTime": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "SimpleTime",
        },
        "Transaction": {
          "_id": "Transaction",
          "config": {
            "properties": {
              "authenticationStrategy": {
                "type": "string",
              },
              "strategySpecifier": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Transaction",
        },
      },
      "decisionCombiners": {
        "DenyOverride": {
          "_id": "DenyOverride",
          "title": "DenyOverride",
        },
      },
      "secrets": {},
      "subjectAttributes": {
        "undefined": "iplanet-am-user-login-status",
      },
      "subjectTypes": {
        "AND": {
          "_id": "AND",
          "config": {
            "properties": {
              "subjects": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "AND",
        },
        "AuthenticatedUsers": {
          "_id": "AuthenticatedUsers",
          "config": {
            "properties": {},
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticatedUsers",
        },
        "Identity": {
          "_id": "Identity",
          "config": {
            "properties": {
              "subjectValues": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Identity",
        },
        "JwtClaim": {
          "_id": "JwtClaim",
          "config": {
            "properties": {
              "claimName": {
                "type": "string",
              },
              "claimValue": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "JwtClaim",
        },
        "NONE": {
          "_id": "NONE",
          "config": {
            "properties": {},
            "type": "object",
          },
          "logical": false,
          "title": "NONE",
        },
        "NOT": {
          "_id": "NOT",
          "config": {
            "properties": {
              "subject": {
                "properties": {},
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "NOT",
        },
        "OR": {
          "_id": "OR",
          "config": {
            "properties": {
              "subjects": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "OR",
        },
        "Policy": {
          "_id": "Policy",
          "config": {
            "properties": {
              "className": {
                "type": "string",
              },
              "name": {
                "type": "string",
              },
              "values": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Policy",
        },
      },
      "webhookService": {
        "webhooks": {
          "_id": "webhooks",
          "_rev": "1954901829",
          "_type": {
            "_id": "webhooks",
            "collection": true,
            "name": "Webhook Service",
          },
          "headers": {
            "accept": "*/*",
          },
        },
      },
      "wsEntity": {
        "ws": {
          "_id": "ws",
          "_rev": "720692750",
          "_type": {
            "_id": "ws",
            "collection": true,
            "name": "Entity Descriptor ",
          },
        },
      },
    },
    "root-first-second": {
      "applicationTypes": {
        "iPlanetAMWebAgentService": {
          "_id": "iPlanetAMWebAgentService",
          "actions": {
            "DELETE": true,
            "GET": true,
            "HEAD": true,
            "OPTIONS": true,
            "PATCH": true,
            "POST": true,
            "PUT": true,
          },
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "iPlanetAMWebAgentService",
          "resourceComparator": "com.sun.identity.entitlement.URLResourceName",
          "saveIndex": "org.forgerock.openam.entitlement.indextree.TreeSaveIndex",
          "searchIndex": "org.forgerock.openam.entitlement.indextree.TreeSearchIndex",
        },
        "sunAMDelegationService": {
          "_id": "sunAMDelegationService",
          "actions": {
            "DELEGATE": true,
            "MODIFY": true,
            "READ": true,
          },
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "sunAMDelegationService",
          "resourceComparator": "com.sun.identity.entitlement.RegExResourceName",
          "saveIndex": "com.sun.identity.entitlement.opensso.DelegationResourceNameIndexGenerator",
          "searchIndex": "com.sun.identity.entitlement.opensso.DelegationResourceNameSplitter",
        },
        "umaApplicationType": {
          "_id": "umaApplicationType",
          "actions": {},
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "umaApplicationType",
          "resourceComparator": "org.forgerock.openam.uma.UmaPolicyResourceMatcher",
          "saveIndex": "org.forgerock.openam.uma.UmaPolicySaveIndex",
          "searchIndex": "org.forgerock.openam.uma.UmaPolicySearchIndex",
        },
      },
      "authenticationChains": {
        "amsterService": {
          "_id": "amsterService",
          "_rev": "644917310",
          "_type": {
            "_id": "EMPTY",
            "collection": true,
            "name": "Authentication Configuration",
          },
          "authChainConfiguration": [
            {
              "criteria": "REQUIRED",
              "module": "Amster",
              "options": {},
            },
          ],
          "loginFailureUrl": [],
          "loginPostProcessClass": [],
          "loginSuccessUrl": [],
        },
        "ldapService": {
          "_id": "ldapService",
          "_rev": "357765346",
          "_type": {
            "_id": "EMPTY",
            "collection": true,
            "name": "Authentication Configuration",
          },
          "authChainConfiguration": [
            {
              "criteria": "REQUIRED",
              "module": "DataStore",
              "options": {},
            },
          ],
          "loginFailureUrl": [],
          "loginPostProcessClass": [],
          "loginSuccessUrl": [],
        },
      },
      "authenticationModules": {
        "amster": {
          "_id": "amster",
          "_type": {
            "_id": "amster",
            "collection": true,
            "name": "ForgeRock Amster",
          },
          "authenticationLevel": 0,
          "authorizedKeys": "/home/prestonhales/am/security/keys/amster/authorized_keys",
          "enabled": true,
        },
        "datastore": {
          "_id": "datastore",
          "_type": {
            "_id": "datastore",
            "collection": true,
            "name": "Data Store",
          },
          "authenticationLevel": 0,
        },
        "federation": {
          "_id": "federation",
          "_type": {
            "_id": "federation",
            "collection": true,
            "name": "Federation",
          },
          "authenticationLevel": 0,
        },
        "hotp": {
          "_id": "hotp",
          "_type": {
            "_id": "hotp",
            "collection": true,
            "name": "HOTP",
          },
          "authenticationLevel": 0,
          "autoSendOTP": false,
          "otpDeliveryMethod": "SMS and E-mail",
          "otpLength": "8",
          "otpMaxRetry": 3,
          "otpValidityDuration": 5,
          "smsGatewayClass": "com.sun.identity.authentication.modules.hotp.DefaultSMSGatewayImpl",
          "smtpFromAddress": "no-reply@openam.org",
          "smtpHostPort": 465,
          "smtpHostname": "smtp.gmail.com",
          "smtpSslEnabled": "SSL",
          "smtpUserPassword": null,
          "smtpUsername": "opensso.sun",
          "userProfileEmailAttribute": "mail",
          "userProfileTelephoneAttribute": "telephoneNumber",
        },
        "ldap": {
          "_id": "ldap",
          "_type": {
            "_id": "ldap",
            "collection": true,
            "name": "LDAP",
          },
          "authenticationLevel": 0,
          "beheraPasswordPolicySupportEnabled": true,
          "connectionHeartbeatInterval": 10,
          "connectionHeartbeatTimeUnit": "SECONDS",
          "minimumPasswordLength": "8",
          "openam-auth-ldap-connection-mode": "LDAPS",
          "operationTimeout": 0,
          "primaryLdapServer": [
            "localhost:50636",
          ],
          "profileAttributeMappings": [],
          "returnUserDN": true,
          "searchScope": "SUBTREE",
          "secondaryLdapServer": [],
          "stopLdapbindAfterInmemoryLockedEnabled": false,
          "trustAllServerCertificates": false,
          "userBindDN": "cn=Directory Manager",
          "userBindPassword": null,
          "userProfileRetrievalAttribute": "uid",
          "userSearchAttributes": [
            "uid",
          ],
          "userSearchStartDN": [
            "dc=openam,dc=forgerock,dc=org",
          ],
        },
        "oath": {
          "_id": "oath",
          "_type": {
            "_id": "oath",
            "collection": true,
            "name": "OATH",
          },
          "addChecksum": "False",
          "authenticationLevel": 0,
          "forgerock-oath-maximum-clock-drift": 0,
          "forgerock-oath-sharedsecret-implementation-class": "org.forgerock.openam.authentication.modules.oath.plugins.DefaultSharedSecretProvider",
          "hotpWindowSize": 100,
          "minimumSecretKeyLength": "32",
          "oathAlgorithm": "HOTP",
          "oathOtpMaxRetry": 3,
          "passwordLength": "6",
          "stepsInWindow": 2,
          "timeStepSize": 30,
          "truncationOffset": -1,
        },
        "sae": {
          "_id": "sae",
          "_type": {
            "_id": "sae",
            "collection": true,
            "name": "SAE",
          },
          "authenticationLevel": 0,
        },
      },
      "conditionTypes": {
        "AMIdentityMembership": {
          "_id": "AMIdentityMembership",
          "config": {
            "properties": {
              "amIdentityName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AMIdentityMembership",
        },
        "AND": {
          "_id": "AND",
          "config": {
            "properties": {
              "conditions": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "AND",
        },
        "AuthLevel": {
          "_id": "AuthLevel",
          "config": {
            "properties": {
              "authLevel": {
                "type": "integer",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthLevel",
        },
        "AuthScheme": {
          "_id": "AuthScheme",
          "config": {
            "properties": {
              "applicationIdleTimeout": {
                "type": "integer",
              },
              "applicationName": {
                "type": "string",
              },
              "authScheme": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthScheme",
        },
        "AuthenticateToRealm": {
          "_id": "AuthenticateToRealm",
          "config": {
            "properties": {
              "authenticateToRealm": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticateToRealm",
        },
        "AuthenticateToService": {
          "_id": "AuthenticateToService",
          "config": {
            "properties": {
              "authenticateToService": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticateToService",
        },
        "IPv4": {
          "_id": "IPv4",
          "config": {
            "properties": {
              "dnsName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "endIp": {
                "type": "string",
              },
              "startIp": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "IPv4",
        },
        "IPv6": {
          "_id": "IPv6",
          "config": {
            "properties": {
              "dnsName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "endIp": {
                "type": "string",
              },
              "startIp": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "IPv6",
        },
        "LDAPFilter": {
          "_id": "LDAPFilter",
          "config": {
            "properties": {
              "ldapFilter": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "LDAPFilter",
        },
        "LEAuthLevel": {
          "_id": "LEAuthLevel",
          "config": {
            "properties": {
              "authLevel": {
                "type": "integer",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "LEAuthLevel",
        },
        "NOT": {
          "_id": "NOT",
          "config": {
            "properties": {
              "condition": {
                "properties": {},
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "NOT",
        },
        "OAuth2Scope": {
          "_id": "OAuth2Scope",
          "config": {
            "properties": {
              "requiredScopes": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "OAuth2Scope",
        },
        "OR": {
          "_id": "OR",
          "config": {
            "properties": {
              "conditions": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "OR",
        },
        "Policy": {
          "_id": "Policy",
          "config": {
            "properties": {
              "className": {
                "type": "string",
              },
              "properties": {
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Policy",
        },
        "ResourceEnvIP": {
          "_id": "ResourceEnvIP",
          "config": {
            "properties": {
              "resourceEnvIPConditionValue": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "ResourceEnvIP",
        },
        "Script": {
          "_id": "Script",
          "config": {
            "properties": {
              "scriptId": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Script",
        },
        "Session": {
          "_id": "Session",
          "config": {
            "properties": {
              "maxSessionTime": {
                "type": "integer",
              },
              "terminateSession": {
                "required": true,
                "type": "boolean",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Session",
        },
        "SessionProperty": {
          "_id": "SessionProperty",
          "config": {
            "properties": {
              "ignoreValueCase": {
                "required": true,
                "type": "boolean",
              },
              "properties": {
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "SessionProperty",
        },
        "SimpleTime": {
          "_id": "SimpleTime",
          "config": {
            "properties": {
              "endDate": {
                "type": "string",
              },
              "endDay": {
                "type": "string",
              },
              "endTime": {
                "type": "string",
              },
              "enforcementTimeZone": {
                "type": "string",
              },
              "startDate": {
                "type": "string",
              },
              "startDay": {
                "type": "string",
              },
              "startTime": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "SimpleTime",
        },
        "Transaction": {
          "_id": "Transaction",
          "config": {
            "properties": {
              "authenticationStrategy": {
                "type": "string",
              },
              "strategySpecifier": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Transaction",
        },
      },
      "decisionCombiners": {
        "DenyOverride": {
          "_id": "DenyOverride",
          "title": "DenyOverride",
        },
      },
      "secrets": {},
      "subjectAttributes": {
        "undefined": "iplanet-am-user-login-status",
      },
      "subjectTypes": {
        "AND": {
          "_id": "AND",
          "config": {
            "properties": {
              "subjects": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "AND",
        },
        "AuthenticatedUsers": {
          "_id": "AuthenticatedUsers",
          "config": {
            "properties": {},
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticatedUsers",
        },
        "Identity": {
          "_id": "Identity",
          "config": {
            "properties": {
              "subjectValues": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Identity",
        },
        "JwtClaim": {
          "_id": "JwtClaim",
          "config": {
            "properties": {
              "claimName": {
                "type": "string",
              },
              "claimValue": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "JwtClaim",
        },
        "NONE": {
          "_id": "NONE",
          "config": {
            "properties": {},
            "type": "object",
          },
          "logical": false,
          "title": "NONE",
        },
        "NOT": {
          "_id": "NOT",
          "config": {
            "properties": {
              "subject": {
                "properties": {},
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "NOT",
        },
        "OR": {
          "_id": "OR",
          "config": {
            "properties": {
              "subjects": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "OR",
        },
        "Policy": {
          "_id": "Policy",
          "config": {
            "properties": {
              "className": {
                "type": "string",
              },
              "name": {
                "type": "string",
              },
              "values": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Policy",
        },
      },
      "webhookService": {
        "webhooks": {
          "_id": "webhooks",
          "_rev": "1954901829",
          "_type": {
            "_id": "webhooks",
            "collection": true,
            "name": "Webhook Service",
          },
          "headers": {
            "accept": "*/*",
          },
        },
      },
      "wsEntity": {
        "ws": {
          "_id": "ws",
          "_rev": "720692750",
          "_type": {
            "_id": "ws",
            "collection": true,
            "name": "Entity Descriptor ",
          },
        },
      },
    },
  },
}
`;

exports[`AmConfigOps Cloud Tests createConfigEntityExportTemplate() 1: Create AM Config Export Template 1`] = `
{
  "global": {},
  "meta": Any<Object>,
  "realm": {
    "alpha": {},
    "bravo": {},
  },
}
`;

exports[`AmConfigOps Cloud Tests createConfigEntityExportTemplate() 2: Create AM Config Export Template without provided realms 1`] = `
{
  "global": {},
  "meta": Any<Object>,
  "realm": {
    "root-alpha": {},
    "root-bravo": {},
  },
}
`;

exports[`AmConfigOps Cloud Tests exportAmConfigEntities() 1: Export AM Config Entities 1`] = `
{
  "global": {
    "serverInformation": {
      "*": {
        "_id": "*",
        "_rev": "-1019531729",
        "cookieName": "6ac6499e9da2071",
        "domains": [
          "openam-frodo-dev.forgeblocks.com",
        ],
        "fileBasedConfiguration": true,
        "forgotPassword": "false",
        "forgotUsername": "false",
        "kbaEnabled": "false",
        "lang": "en-US",
        "protectedUserAttributes": [
          "telephoneNumber",
          "mail",
        ],
        "realm": "/",
        "referralsEnabled": "false",
        "secureCookie": true,
        "selfRegistration": "false",
        "socialImplementations": [],
        "successfulUserRegistrationDestination": "default",
        "userIdAttributes": [],
        "xuiUserSessionValidationEnabled": true,
        "zeroPageLogin": {
          "allowedWithoutReferer": true,
          "enabled": false,
          "refererWhitelist": [],
        },
      },
    },
    "serverVersion": {
      "version": {
        "_id": "version",
        "_rev": "355151460",
        "date": "2024-September-23 14:30",
        "fullVersion": "ForgeRock Access Management 7.6.0-SNAPSHOT Build 493165657bbb9390016bd43ca767a46f23d8d24a (2024-September-23 14:30)",
        "revision": "493165657bbb9390016bd43ca767a46f23d8d24a",
        "version": "7.6.0-SNAPSHOT",
      },
    },
  },
  "meta": Any<Object>,
  "realm": {
    "root-alpha": {
      "applicationTypes": {
        "iPlanetAMWebAgentService": {
          "_id": "iPlanetAMWebAgentService",
          "actions": {
            "DELETE": true,
            "GET": true,
            "HEAD": true,
            "OPTIONS": true,
            "PATCH": true,
            "POST": true,
            "PUT": true,
          },
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "iPlanetAMWebAgentService",
          "resourceComparator": "com.sun.identity.entitlement.URLResourceName",
          "saveIndex": "org.forgerock.openam.entitlement.indextree.TreeSaveIndex",
          "searchIndex": "org.forgerock.openam.entitlement.indextree.TreeSearchIndex",
        },
        "sunAMDelegationService": {
          "_id": "sunAMDelegationService",
          "actions": {
            "DELEGATE": true,
            "MODIFY": true,
            "READ": true,
          },
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "sunAMDelegationService",
          "resourceComparator": "com.sun.identity.entitlement.RegExResourceName",
          "saveIndex": "com.sun.identity.entitlement.opensso.DelegationResourceNameIndexGenerator",
          "searchIndex": "com.sun.identity.entitlement.opensso.DelegationResourceNameSplitter",
        },
        "umaApplicationType": {
          "_id": "umaApplicationType",
          "actions": {},
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "umaApplicationType",
          "resourceComparator": "org.forgerock.openam.uma.UmaPolicyResourceMatcher",
          "saveIndex": "org.forgerock.openam.uma.UmaPolicySaveIndex",
          "searchIndex": "org.forgerock.openam.uma.UmaPolicySearchIndex",
        },
      },
      "authenticationChains": {},
      "authenticationModules": {
        "Federation": {
          "_id": "Federation",
          "_type": {
            "_id": "federation",
            "collection": true,
            "name": "Federation",
          },
          "authenticationLevel": 0,
        },
        "amster": {
          "_id": "amster",
          "_type": {
            "_id": "amster",
            "collection": true,
            "name": "ForgeRock Amster",
          },
          "authenticationLevel": 0,
          "authorizedKeys": "/home/forgerock/openam/security/keys/amster/authorized_keys",
          "enabled": true,
        },
        "datastore": {
          "_id": "datastore",
          "_type": {
            "_id": "datastore",
            "collection": true,
            "name": "Data Store",
          },
          "authenticationLevel": 0,
        },
        "federation": {
          "_id": "federation",
          "_type": {
            "_id": "federation",
            "collection": true,
            "name": "Federation",
          },
          "authenticationLevel": 0,
        },
        "hotp": {
          "_id": "hotp",
          "_type": {
            "_id": "hotp",
            "collection": true,
            "name": "HOTP",
          },
          "authenticationLevel": 0,
          "autoSendOTP": false,
          "otpDeliveryMethod": "SMS and E-mail",
          "otpLength": "8",
          "otpMaxRetry": 3,
          "otpValidityDuration": 5,
          "smsGatewayClass": "com.sun.identity.authentication.modules.hotp.DefaultSMSGatewayImpl",
          "smtpFromAddress": "no-reply@openam.org",
          "smtpHostPort": 465,
          "smtpHostname": "smtp.gmail.com",
          "smtpSslEnabled": "SSL",
          "smtpUserPassword": null,
          "smtpUsername": "opensso.sun",
          "userProfileEmailAttribute": "mail",
          "userProfileTelephoneAttribute": "telephoneNumber",
        },
        "ldap": {
          "_id": "ldap",
          "_type": {
            "_id": "ldap",
            "collection": true,
            "name": "LDAP",
          },
          "authenticationLevel": 0,
          "beheraPasswordPolicySupportEnabled": true,
          "connectionHeartbeatInterval": 10,
          "connectionHeartbeatTimeUnit": "SECONDS",
          "minimumPasswordLength": "8",
          "openam-auth-ldap-connection-mode": "LDAP",
          "operationTimeout": 0,
          "primaryLdapServer": [
            "userstore-1.userstore:1389",
            "userstore-0.userstore:1389",
            "userstore-2.userstore:1389",
          ],
          "profileAttributeMappings": [],
          "returnUserDN": true,
          "searchScope": "SUBTREE",
          "secondaryLdapServer": [],
          "stopLdapbindAfterInmemoryLockedEnabled": false,
          "trustAllServerCertificates": false,
          "userBindDN": "uid=admin",
          "userBindPassword": null,
          "userProfileRetrievalAttribute": "uid",
          "userSearchAttributes": [
            "uid",
          ],
          "userSearchStartDN": [
            "ou=identities",
          ],
        },
        "oath": {
          "_id": "oath",
          "_type": {
            "_id": "oath",
            "collection": true,
            "name": "OATH",
          },
          "addChecksum": "False",
          "authenticationLevel": 0,
          "forgerock-oath-maximum-clock-drift": 0,
          "forgerock-oath-sharedsecret-implementation-class": "org.forgerock.openam.authentication.modules.oath.plugins.DefaultSharedSecretProvider",
          "hotpWindowSize": 100,
          "minimumSecretKeyLength": "32",
          "oathAlgorithm": "HOTP",
          "oathOtpMaxRetry": 3,
          "passwordLength": "6",
          "stepsInWindow": 2,
          "timeStepSize": 30,
          "truncationOffset": -1,
        },
        "sae": {
          "_id": "sae",
          "_type": {
            "_id": "sae",
            "collection": true,
            "name": "SAE",
          },
          "authenticationLevel": 0,
        },
      },
      "conditionTypes": {
        "AMIdentityMembership": {
          "_id": "AMIdentityMembership",
          "config": {
            "properties": {
              "amIdentityName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AMIdentityMembership",
        },
        "AND": {
          "_id": "AND",
          "config": {
            "properties": {
              "conditions": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "AND",
        },
        "AuthLevel": {
          "_id": "AuthLevel",
          "config": {
            "properties": {
              "authLevel": {
                "type": "integer",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthLevel",
        },
        "AuthScheme": {
          "_id": "AuthScheme",
          "config": {
            "properties": {
              "applicationIdleTimeout": {
                "type": "integer",
              },
              "applicationName": {
                "type": "string",
              },
              "authScheme": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthScheme",
        },
        "AuthenticateToRealm": {
          "_id": "AuthenticateToRealm",
          "config": {
            "properties": {
              "authenticateToRealm": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticateToRealm",
        },
        "AuthenticateToService": {
          "_id": "AuthenticateToService",
          "config": {
            "properties": {
              "authenticateToService": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticateToService",
        },
        "IPv4": {
          "_id": "IPv4",
          "config": {
            "properties": {
              "dnsName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "endIp": {
                "type": "string",
              },
              "startIp": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "IPv4",
        },
        "IPv6": {
          "_id": "IPv6",
          "config": {
            "properties": {
              "dnsName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "endIp": {
                "type": "string",
              },
              "startIp": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "IPv6",
        },
        "LDAPFilter": {
          "_id": "LDAPFilter",
          "config": {
            "properties": {
              "ldapFilter": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "LDAPFilter",
        },
        "LEAuthLevel": {
          "_id": "LEAuthLevel",
          "config": {
            "properties": {
              "authLevel": {
                "type": "integer",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "LEAuthLevel",
        },
        "NOT": {
          "_id": "NOT",
          "config": {
            "properties": {
              "condition": {
                "properties": {},
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "NOT",
        },
        "OAuth2Scope": {
          "_id": "OAuth2Scope",
          "config": {
            "properties": {
              "requiredScopes": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "OAuth2Scope",
        },
        "OR": {
          "_id": "OR",
          "config": {
            "properties": {
              "conditions": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "OR",
        },
        "Policy": {
          "_id": "Policy",
          "config": {
            "properties": {
              "className": {
                "type": "string",
              },
              "properties": {
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Policy",
        },
        "ResourceEnvIP": {
          "_id": "ResourceEnvIP",
          "config": {
            "properties": {
              "resourceEnvIPConditionValue": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "ResourceEnvIP",
        },
        "Script": {
          "_id": "Script",
          "config": {
            "properties": {
              "scriptId": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Script",
        },
        "Session": {
          "_id": "Session",
          "config": {
            "properties": {
              "maxSessionTime": {
                "type": "integer",
              },
              "terminateSession": {
                "required": true,
                "type": "boolean",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Session",
        },
        "SessionProperty": {
          "_id": "SessionProperty",
          "config": {
            "properties": {
              "ignoreValueCase": {
                "required": true,
                "type": "boolean",
              },
              "properties": {
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "SessionProperty",
        },
        "SimpleTime": {
          "_id": "SimpleTime",
          "config": {
            "properties": {
              "endDate": {
                "type": "string",
              },
              "endDay": {
                "type": "string",
              },
              "endTime": {
                "type": "string",
              },
              "enforcementTimeZone": {
                "type": "string",
              },
              "startDate": {
                "type": "string",
              },
              "startDay": {
                "type": "string",
              },
              "startTime": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "SimpleTime",
        },
        "Transaction": {
          "_id": "Transaction",
          "config": {
            "properties": {
              "authenticationStrategy": {
                "type": "string",
              },
              "strategySpecifier": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Transaction",
        },
      },
      "decisionCombiners": {
        "DenyOverride": {
          "_id": "DenyOverride",
          "title": "DenyOverride",
        },
      },
      "secrets": {},
      "subjectAttributes": {
        "undefined": "iplanet-am-user-login-status",
      },
      "subjectTypes": {
        "AND": {
          "_id": "AND",
          "config": {
            "properties": {
              "subjects": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "AND",
        },
        "AuthenticatedUsers": {
          "_id": "AuthenticatedUsers",
          "config": {
            "properties": {},
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticatedUsers",
        },
        "Identity": {
          "_id": "Identity",
          "config": {
            "properties": {
              "subjectValues": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Identity",
        },
        "JwtClaim": {
          "_id": "JwtClaim",
          "config": {
            "properties": {
              "claimName": {
                "type": "string",
              },
              "claimValue": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "JwtClaim",
        },
        "NONE": {
          "_id": "NONE",
          "config": {
            "properties": {},
            "type": "object",
          },
          "logical": false,
          "title": "NONE",
        },
        "NOT": {
          "_id": "NOT",
          "config": {
            "properties": {
              "subject": {
                "properties": {},
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "NOT",
        },
        "OR": {
          "_id": "OR",
          "config": {
            "properties": {
              "subjects": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "OR",
        },
        "Policy": {
          "_id": "Policy",
          "config": {
            "properties": {
              "className": {
                "type": "string",
              },
              "name": {
                "type": "string",
              },
              "values": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Policy",
        },
      },
      "webhookService": {},
      "wsEntity": {},
    },
    "root-bravo": {
      "applicationTypes": {
        "iPlanetAMWebAgentService": {
          "_id": "iPlanetAMWebAgentService",
          "actions": {
            "DELETE": true,
            "GET": true,
            "HEAD": true,
            "OPTIONS": true,
            "PATCH": true,
            "POST": true,
            "PUT": true,
          },
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "iPlanetAMWebAgentService",
          "resourceComparator": "com.sun.identity.entitlement.URLResourceName",
          "saveIndex": "org.forgerock.openam.entitlement.indextree.TreeSaveIndex",
          "searchIndex": "org.forgerock.openam.entitlement.indextree.TreeSearchIndex",
        },
        "sunAMDelegationService": {
          "_id": "sunAMDelegationService",
          "actions": {
            "DELEGATE": true,
            "MODIFY": true,
            "READ": true,
          },
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "sunAMDelegationService",
          "resourceComparator": "com.sun.identity.entitlement.RegExResourceName",
          "saveIndex": "com.sun.identity.entitlement.opensso.DelegationResourceNameIndexGenerator",
          "searchIndex": "com.sun.identity.entitlement.opensso.DelegationResourceNameSplitter",
        },
        "umaApplicationType": {
          "_id": "umaApplicationType",
          "actions": {},
          "applicationClassName": "com.sun.identity.entitlement.Application",
          "name": "umaApplicationType",
          "resourceComparator": "org.forgerock.openam.uma.UmaPolicyResourceMatcher",
          "saveIndex": "org.forgerock.openam.uma.UmaPolicySaveIndex",
          "searchIndex": "org.forgerock.openam.uma.UmaPolicySearchIndex",
        },
      },
      "authenticationChains": {},
      "authenticationModules": {
        "Federation": {
          "_id": "Federation",
          "_type": {
            "_id": "federation",
            "collection": true,
            "name": "Federation",
          },
          "authenticationLevel": 0,
        },
        "amster": {
          "_id": "amster",
          "_type": {
            "_id": "amster",
            "collection": true,
            "name": "ForgeRock Amster",
          },
          "authenticationLevel": 0,
          "authorizedKeys": "/home/forgerock/openam/security/keys/amster/authorized_keys",
          "enabled": true,
        },
        "datastore": {
          "_id": "datastore",
          "_type": {
            "_id": "datastore",
            "collection": true,
            "name": "Data Store",
          },
          "authenticationLevel": 0,
        },
        "federation": {
          "_id": "federation",
          "_type": {
            "_id": "federation",
            "collection": true,
            "name": "Federation",
          },
          "authenticationLevel": 0,
        },
        "hotp": {
          "_id": "hotp",
          "_type": {
            "_id": "hotp",
            "collection": true,
            "name": "HOTP",
          },
          "authenticationLevel": 0,
          "autoSendOTP": false,
          "otpDeliveryMethod": "SMS and E-mail",
          "otpLength": "8",
          "otpMaxRetry": 3,
          "otpValidityDuration": 5,
          "smsGatewayClass": "com.sun.identity.authentication.modules.hotp.DefaultSMSGatewayImpl",
          "smtpFromAddress": "no-reply@openam.org",
          "smtpHostPort": 465,
          "smtpHostname": "smtp.gmail.com",
          "smtpSslEnabled": "SSL",
          "smtpUserPassword": null,
          "smtpUsername": "opensso.sun",
          "userProfileEmailAttribute": "mail",
          "userProfileTelephoneAttribute": "telephoneNumber",
        },
        "ldap": {
          "_id": "ldap",
          "_type": {
            "_id": "ldap",
            "collection": true,
            "name": "LDAP",
          },
          "authenticationLevel": 0,
          "beheraPasswordPolicySupportEnabled": true,
          "connectionHeartbeatInterval": 10,
          "connectionHeartbeatTimeUnit": "SECONDS",
          "minimumPasswordLength": "8",
          "openam-auth-ldap-connection-mode": "LDAP",
          "operationTimeout": 0,
          "primaryLdapServer": [
            "userstore-1.userstore:1389",
            "userstore-0.userstore:1389",
            "userstore-2.userstore:1389",
          ],
          "profileAttributeMappings": [],
          "returnUserDN": true,
          "searchScope": "SUBTREE",
          "secondaryLdapServer": [],
          "stopLdapbindAfterInmemoryLockedEnabled": false,
          "trustAllServerCertificates": false,
          "userBindDN": "uid=admin",
          "userBindPassword": null,
          "userProfileRetrievalAttribute": "uid",
          "userSearchAttributes": [
            "uid",
          ],
          "userSearchStartDN": [
            "ou=identities",
          ],
        },
        "oath": {
          "_id": "oath",
          "_type": {
            "_id": "oath",
            "collection": true,
            "name": "OATH",
          },
          "addChecksum": "False",
          "authenticationLevel": 0,
          "forgerock-oath-maximum-clock-drift": 0,
          "forgerock-oath-sharedsecret-implementation-class": "org.forgerock.openam.authentication.modules.oath.plugins.DefaultSharedSecretProvider",
          "hotpWindowSize": 100,
          "minimumSecretKeyLength": "32",
          "oathAlgorithm": "HOTP",
          "oathOtpMaxRetry": 3,
          "passwordLength": "6",
          "stepsInWindow": 2,
          "timeStepSize": 30,
          "truncationOffset": -1,
        },
        "sae": {
          "_id": "sae",
          "_type": {
            "_id": "sae",
            "collection": true,
            "name": "SAE",
          },
          "authenticationLevel": 0,
        },
      },
      "conditionTypes": {
        "AMIdentityMembership": {
          "_id": "AMIdentityMembership",
          "config": {
            "properties": {
              "amIdentityName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AMIdentityMembership",
        },
        "AND": {
          "_id": "AND",
          "config": {
            "properties": {
              "conditions": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "AND",
        },
        "AuthLevel": {
          "_id": "AuthLevel",
          "config": {
            "properties": {
              "authLevel": {
                "type": "integer",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthLevel",
        },
        "AuthScheme": {
          "_id": "AuthScheme",
          "config": {
            "properties": {
              "applicationIdleTimeout": {
                "type": "integer",
              },
              "applicationName": {
                "type": "string",
              },
              "authScheme": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthScheme",
        },
        "AuthenticateToRealm": {
          "_id": "AuthenticateToRealm",
          "config": {
            "properties": {
              "authenticateToRealm": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticateToRealm",
        },
        "AuthenticateToService": {
          "_id": "AuthenticateToService",
          "config": {
            "properties": {
              "authenticateToService": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticateToService",
        },
        "IPv4": {
          "_id": "IPv4",
          "config": {
            "properties": {
              "dnsName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "endIp": {
                "type": "string",
              },
              "startIp": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "IPv4",
        },
        "IPv6": {
          "_id": "IPv6",
          "config": {
            "properties": {
              "dnsName": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "endIp": {
                "type": "string",
              },
              "startIp": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "IPv6",
        },
        "LDAPFilter": {
          "_id": "LDAPFilter",
          "config": {
            "properties": {
              "ldapFilter": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "LDAPFilter",
        },
        "LEAuthLevel": {
          "_id": "LEAuthLevel",
          "config": {
            "properties": {
              "authLevel": {
                "type": "integer",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "LEAuthLevel",
        },
        "NOT": {
          "_id": "NOT",
          "config": {
            "properties": {
              "condition": {
                "properties": {},
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "NOT",
        },
        "OAuth2Scope": {
          "_id": "OAuth2Scope",
          "config": {
            "properties": {
              "requiredScopes": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "OAuth2Scope",
        },
        "OR": {
          "_id": "OR",
          "config": {
            "properties": {
              "conditions": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "OR",
        },
        "Policy": {
          "_id": "Policy",
          "config": {
            "properties": {
              "className": {
                "type": "string",
              },
              "properties": {
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Policy",
        },
        "ResourceEnvIP": {
          "_id": "ResourceEnvIP",
          "config": {
            "properties": {
              "resourceEnvIPConditionValue": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "ResourceEnvIP",
        },
        "Script": {
          "_id": "Script",
          "config": {
            "properties": {
              "scriptId": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Script",
        },
        "Session": {
          "_id": "Session",
          "config": {
            "properties": {
              "maxSessionTime": {
                "type": "integer",
              },
              "terminateSession": {
                "required": true,
                "type": "boolean",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Session",
        },
        "SessionProperty": {
          "_id": "SessionProperty",
          "config": {
            "properties": {
              "ignoreValueCase": {
                "required": true,
                "type": "boolean",
              },
              "properties": {
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "SessionProperty",
        },
        "SimpleTime": {
          "_id": "SimpleTime",
          "config": {
            "properties": {
              "endDate": {
                "type": "string",
              },
              "endDay": {
                "type": "string",
              },
              "endTime": {
                "type": "string",
              },
              "enforcementTimeZone": {
                "type": "string",
              },
              "startDate": {
                "type": "string",
              },
              "startDay": {
                "type": "string",
              },
              "startTime": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "SimpleTime",
        },
        "Transaction": {
          "_id": "Transaction",
          "config": {
            "properties": {
              "authenticationStrategy": {
                "type": "string",
              },
              "strategySpecifier": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Transaction",
        },
      },
      "decisionCombiners": {
        "DenyOverride": {
          "_id": "DenyOverride",
          "title": "DenyOverride",
        },
      },
      "secrets": {},
      "subjectAttributes": {
        "undefined": "iplanet-am-user-login-status",
      },
      "subjectTypes": {
        "AND": {
          "_id": "AND",
          "config": {
            "properties": {
              "subjects": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "AND",
        },
        "AuthenticatedUsers": {
          "_id": "AuthenticatedUsers",
          "config": {
            "properties": {},
            "type": "object",
          },
          "logical": false,
          "title": "AuthenticatedUsers",
        },
        "Identity": {
          "_id": "Identity",
          "config": {
            "properties": {
              "subjectValues": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Identity",
        },
        "JwtClaim": {
          "_id": "JwtClaim",
          "config": {
            "properties": {
              "claimName": {
                "type": "string",
              },
              "claimValue": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "JwtClaim",
        },
        "NONE": {
          "_id": "NONE",
          "config": {
            "properties": {},
            "type": "object",
          },
          "logical": false,
          "title": "NONE",
        },
        "NOT": {
          "_id": "NOT",
          "config": {
            "properties": {
              "subject": {
                "properties": {},
                "type": "object",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "NOT",
        },
        "OR": {
          "_id": "OR",
          "config": {
            "properties": {
              "subjects": {
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": true,
          "title": "OR",
        },
        "Policy": {
          "_id": "Policy",
          "config": {
            "properties": {
              "className": {
                "type": "string",
              },
              "name": {
                "type": "string",
              },
              "values": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "logical": false,
          "title": "Policy",
        },
      },
      "webhookService": {},
      "wsEntity": {},
    },
  },
}
`;
